fix: fix private chats last message overflowing div

--- a/src/components/PrivateChats/PrivateChat/_privateChat.scss
+++ b/src/components/PrivateChats/PrivateChat/_privateChat.scss
@@ -28,7 +28,7 @@
       display: flex;
       flex-direction: column;
       align-items: flex-start;
-      gap: 5px;
+      gap: 0px;
       .loggedUser-chat__username {
         font-size: 16px;
         color: $whiteColor;
@@ -36,6 +36,10 @@
       .chat-info__last-message {
         font-size: 14px;
         color: $textGrayColor;
+        overflow: hidden;
+        white-space: nowrap;
+        text-overflow: ellipsis;
+        width: 160px;
       }
     }
   }
